[package]
name = "uc-application"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
# Core domain models
uc-core = { path = "../uc-core" }
# Infrastructure (pragmatic exception: SearchPipeline is a concrete infra helper
# grouped in AppDeps.search for single-ownership, per Phase 92 plan decision)
uc-infra = { path = "../uc-infra" }

# Observability (flow correlation, stage constants)
uc-observability = { path = "../uc-observability" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
futures = "0.3.31"
tracing = "0.1.44"
hmac = "0.12"
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
# Slice 2 Phase 2: carry ciphertext bytes across use case / facade / port
# boundaries without extra clones. Matches uc-core + uc-infra.
bytes = "1.7"
url = "2"
# Base64 — Basic Auth credential parsing (mobile sync auth use case).
base64 = "0.22"
# QR code rendering for SyncClipboard install URL (mobile sync register use case).
# Used to produce both PNG bytes (frontend img tag) and ASCII art (CLI stdout).
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# Semver parsing for upgrade-detection use case (`facade::upgrade`).
# Compares last_seen_version (port-stored String) against current build
# version to derive `UpgradeStatus`.
semver = "1"
# Concurrent TTL cache with bounded capacity. Used by ApplyInbound to dedupe
# rapid-replay inbound frames (content_hash / visible_key → entry_id) without
# rolling a custom expiring map.
moka = { version = "0.12", default-features = false, features = ["sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dev-dependencies]
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform" }
mockall = "0.13"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
