[package]
name = "uc-bootstrap"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Composition root — sole crate allowed to depend on uc-core + uc-application + uc-infra + uc-platform simultaneously"

[dependencies]
uc-core = { path = "../uc-core" }
uc-application = { path = "../uc-application" }
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform" }
uc-observability = { path = "../uc-observability" }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
sentry = { version = "0.46.1", features = ["tracing"] }
sentry-tracing = "0.46.1"
gethostname = "1.1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
blake3 = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
mockall = "0.13"
wiremock = "0.6"
# Slice 2 Phase 2 · T12 — clipboard e2e packs plaintext as `Bytes`
# for `ClipboardSyncFacade::dispatch_entry`.
bytes = "1.7"
# Phase 94 / plan 06 — e2e 测试同 binary 内多次 IrohNodeBuilder::bind
# sponsor + joiner 双 endpoint；`uc-infra/test-util` feature 在测试构建下
# elide BIND_LOCK 守护（production build 不启用此 feature，结构性防御依然
# 生效）。见 uc-infra/src/network/iroh/node.rs BIND_LOCK doc comment。
uc-infra = { path = "../uc-infra", features = ["test-util"] }
