[package]
name = "uc-cli"
version.workspace = true
edition = "2021"
description = "Command-line interface for UniClipboard"

[[bin]]
name = "uniclipboard-cli"
path = "src/main.rs"

[dependencies]
uc-bootstrap = { path = "../uc-bootstrap" }
uc-observability = { path = "../uc-observability" }
uc-app = { path = "../uc-app" }
uc-core = { path = "../uc-core" }
uc-daemon = { path = "../uc-daemon" }
uc-daemon-client = { path = "../uc-daemon-client" }
uc-cli-macros = { path = "../uc-cli-macros" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
libc = "0.2"
hostname = "0.4"
uc-application = { path = "../uc-application" }
# Slice 2 Phase 2 · T11 — `send` / `watch` need to package raw bytes as
# `bytes::Bytes` for `ClipboardSyncFacade::dispatch_entry` and compute a
# deduplication hash for the wire `ClipboardHeader.content_hash`. SHA-256
# is the same algorithm the Phase 2 plan and Slice 5 fingerprint factory
# converged on.
bytes = "1.7"
sha2 = "0.10"
# Installs the default `rustls` crypto provider process-wide at `main()`
# start — iroh-quinn and reqwest both consume rustls 0.23+, which now
# requires an explicit `CryptoProvider` before the first TLS handshake.
# Without this the first party to set up a `ClientConfig` (today iroh)
# leaves later consumers (reqwest → rendezvous) with a provider that
# surfaces certs as `CertificateError::BadEncoding`.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
axum = { version = "0.7", features = ["ws", "tokio", "http1", "http2"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
