[package]
name = "uc-daemon-contract"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Daemon transport contracts shared by clients and server"

[lib]
name = "uc_daemon_contract"
path = "src/lib.rs"

[dependencies]
uc-core = { path = "../uc-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.18.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4", features = ["uuid", "chrono", "url"] }