[package]
name = "uc-daemon-local"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Local daemon runtime metadata and process coordination"

[features]
test-helpers = []

[lib]
name = "uc_daemon_local"
path = "src/lib.rs"

[dependencies]
uc-application = { path = "../uc-application" }
uc-daemon-contract = { path = "../uc-daemon-contract" }
uc-platform = { path = "../uc-platform" }
anyhow = "1.0"
fs2 = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
