[package]
name = "uc-daemon"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Compatibility daemon binary for UniClipboard desktop host"

[[bin]]
name = "uniclipboard-daemon"
path = "src/main.rs"

[lib]
name = "uc_daemon"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
uc-desktop = { path = "../uc-desktop" }
