[package]
name = "uc-daemon"
version.workspace = true
license.workspace = true
edition = "2021"
description = "GUI-agnostic daemon runtime extracted from uc-desktop (ADR-008 P1); hosts uniclipd later"

[lib]
name = "uc_daemon"
path = "src/lib.rs"

[dependencies]
uc-application = { path = "../uc-application" }
uc-core = { path = "../uc-core" }
uc-bootstrap = { path = "../uc-bootstrap" }
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform", features = ["test-helpers"] }
uc-observability = { path = "../uc-observability" }
uc-daemon-contract = { path = "../uc-daemon-contract" }
uc-daemon-local = { path = "../uc-daemon-local" }
uc-webserver = { path = "../uc-webserver" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
uc-daemon-local = { path = "../uc-daemon-local", features = ["test-helpers"] }
tempfile = "3"
chrono = { version = "0.4", default-features = true }
mockall = "0.13"
