[package]
name = "uc-daemon"
version.workspace = true
license.workspace = true
edition = "2021"
description = "GUI-agnostic daemon runtime (ADR-008); hosts the uniclipd binary"

[lib]
name = "uc_daemon"
path = "src/lib.rs"

[[bin]]
name = "uniclipd"
path = "src/main.rs"

[dependencies]
uc-application = { path = "../uc-application" }
uc-core = { path = "../uc-core" }
uc-bootstrap = { path = "../uc-bootstrap" }
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform", features = ["test-helpers"] }
uc-observability = { path = "../uc-observability" }
uc-daemon-contract = { path = "../uc-daemon-contract" }
uc-daemon-local = { path = "../uc-daemon-local" }
uc-webserver = { path = "../uc-webserver" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
uc-daemon-local = { path = "../uc-daemon-local", features = ["test-helpers"] }
tempfile = "3"
chrono = { version = "0.4", default-features = true }
mockall = "0.13"
