[package]
name = "uc-infra"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Infrastructure utilities and shared components for UniClipboard"

[features]
default = []
# Phase 94 / Pitfall 3 — disables `IrohNodeBuilder::bind` 的 OnceCell 单进程
# 守护，让下游 crate 的 e2e 测试在同 binary 内多次 bind sponsor + joiner
# endpoint。`#[cfg(test)]` 只对正在 `cargo test` 的 crate 生效，不传递到
# 依赖；下游 e2e（如 uc-bootstrap/tests/slice*_e2e.rs）必须显式启用此 feature
# 来 elide 守护。**production build 严禁启用此 feature**，否则 Pitfall 3
# 结构性防御失效。见 src/network/iroh/node.rs 上的 BIND_LOCK doc comment。
test-util = []

[dependencies]
# ===== Workspace crates =====
uc-core = { path = "../uc-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Stream consumption for iroh-blobs Downloader progress events
futures-util = "0.3"

# ===== 数据库 =====
diesel = { version = "2.3.5", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] } # ORM数据库框架
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
libsqlite3-sys = { version = "0.35", features = ["bundled"] }    # SQLite系统库绑定
diesel_migrations = { version = "2.2.0", features = ["sqlite"] } # Diesel迁移工具

# Async runtime (for mpsc channels in ports)
tokio = { version = "1", features = [
    "sync",
    "fs",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
] }

tracing = "0.1"
argon2 = "0.5.3"
base64 = "0.22"
subtle = "2.5.0"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
# Memory hygiene: zero out MasterKey / Kek bytes when dropped so residual key
# material does not linger in heap/stack pages after lock/clear/refresh paths.
zeroize = { version = "1.8.2", features = ["derive"] }
blake3 = "1.8.2"
hex = "0.4.3"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
base32 = "0.5"
unicode-normalization = "0.1"
unicode-segmentation = "1"
url = "2"
config = "0.15.19"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff"] }
zstd = { version = "0.13", features = ["zstdmt"] }
# SpoolManager 用 IndexMap 维护 insertion-ordered 条目，做 O(1) 容量计数 +
# FIFO eviction。需要稳定的迭代顺序来表达 "evict 最旧未完成 staged" 语义，
# 普通 HashMap 做不到。
indexmap = "2"

# ===== Network stack (iroh + rendezvous HTTP) =====
# `address-lookup-mdns` enables `iroh::address_lookup::MdnsAddressLookup`
# (swarm-discovery TXT records over LAN multicast) so two peers on the same
# Wi-Fi advertise their LAN IPs to each other directly. UniClipboard#486
# §三 B: drops the dependency on pkarr/rendezvous for LAN discovery,
# bypassing the latency that left magicsock with relay-only candidates and
# pushing it onto Clash TUN paths.
iroh = { version = "0.98", features = ["address-lookup-mdns"] }
iroh-blobs = "0.100"
# 直接依赖 iroh-relay 0.98 以使用其 ClientBuilder 做"中继可达性探测"。
# iroh 本身只 re-export 了 `dns`/`RelayMap`,没有暴露 `client` 模块。
# default features 已经带上 `tls-ring`,与 iroh 自身保持一致。
iroh-relay = "0.98"
# 用于持有 ClientBuilder 需要的 `ClientConfig`。版本对齐 iroh / iroh-relay
# 通过 cargo tree 已锁定到 0.23 主线,这里不重复写 default-features = false。
rustls = "0.23"
iroh-tickets = "0.5"
# iroh 0.97 forked quinn-proto into noq-proto (Custom Transports & noq).
# Used solely to reach `congestion::BbrConfig` when wiring the QUIC
# TransportConfig — iroh re-exports the trait but not the BBR factory itself.
noq-proto = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
# Slice 1 pairing session wire codec — binary, compact, serde-compatible.
postcard = { version = "1", features = ["use-std"] }
# Slice 2 Phase 2 clipboard wire codec — carry zero-copy ciphertext across
# the stream/facade boundary without extra clones. Same crate uc-core already
# pulls in on its own port contracts.
bytes = "1.7"
# Mobile-sync v1 LAN interface enumeration (`NetworkInterfaceLanProbe`).
# Cross-platform wrapper over getifaddrs / GetAdaptersAddresses; we only
# read IPv4 addresses + interface name, no other features pulled in.
network-interface = "2.0"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
mockall = "0.13"
wiremock = "0.6"
